[package]
name = "steady-fs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Small, boring, reliable filesystem helpers for Rust CLI tools and developer apps."
repository = "https://github.com/alicechan-dev/steady-rs"
homepage = "https://github.com/alicechan-dev/steady-rs"
documentation = "https://docs.rs/steady-fs"
readme = "README.md"
keywords = ["filesystem", "atomic", "cli", "fs"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
thiserror = "1"
tempfile = "3"

[dev-dependencies]
assert_fs = "1"
predicates = "3"
